# rdkit-cpp-example-template

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  environment.yaml
cmake/: BundleUnix.cmake  BundleWindows.cmake
profiles/: linux_release  macos_release  windows_release
src/cpp/: smiles_processing.cpp
